tests/NormalTests/paczka1/small_fuzzy/53576558.err
Error in line 7: ds9zRHO A4D7 89,5
Error in line 1: fQrtpO4UmXV A253 141,6
Error in line 4: ds9zRHO A253 76,0
